Move form wrapper, add button spacing fix and other small fixes

--- a/src/sass/_checkout.sass
+++ b/src/sass/_checkout.sass
@@ -111,6 +111,7 @@
 		position: absolute
 		left: 9px
 		bottom: 4px
+		+av-demibold
 		font-size: 12px
 		color: #E34F30
 
@@ -167,7 +168,7 @@
 		text-transform: uppercase
 	&__button-wrap
 		display: flex
-		justify-content: space-between
+		justify-content: center
 		margin: 0 -5px 26px
 	&__button-el
 		flex-basis: 100%
